@@ -59,8 +59,9 @@ public:
 	QString sPreset;
 	QString sPresetDir;
 
-	// Dial knob behavior mode.
+	// Knob behavior modes.
 	int iKnobDialMode;
+	int iKnobEditMode;
 
 	// Special persistent options.
 	bool bControlsEnabled;
